--- a/src/Builder/Builder.css
+++ b/src/Builder/Builder.css
@@ -6,7 +6,10 @@
     height: 100%;
 }
 .component-block{
-    background-color: bisque;
+    max-width: 300px;
+    margin: 10px;
+    padding:20px;
+    border-radius: 15px;
 }
 
 .prop-block{
