--- a/src/Builder/Builder.css
+++ b/src/Builder/Builder.css
@@ -1,17 +1,18 @@
+.builder {
 
-
-.builder{
- 
     width: 100%;
     height: 100%;
 }
-.component-block{
-    max-width: 300px;
-    margin: 10px;
-    padding:20px;
-    border-radius: 15px;
+
+.component-block {
+    width: 80%;
+    min-width: 400px;
+    margin: 15px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 37px -15px rgba(0, 0, 0, 0.50);
 }
 
-.prop-block{
-    margin:10px
+.prop-block {
+    margin: 10px
 }
